# prostate-cadx

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  requirements.txt  verification_report.json
backend/: api.py  daemon.py  install_task.ps1  streamlit_app.py  watchdog.py
config/: config.yaml
docs/: AUDIT.md  DATA.md  MODEL_CARD.md  README.md  REPRODUCE.md  RESULTS.md  RUNBOOK.md
lib/: config.py  data.py  db.py  eval.py  gpu.py  gradcam.py  llm.py  logging_setup.py  model.py  train.py
loop/: engine.py  skills_seed.json
scratch/: test_profiler.py
scripts/: calibrate_macenko.py  download_data.py  evaluate.py  full_audit_eval.py  gdc_query.py  generate_skills.py  gradcam_demo.py  init_registry.py  label_audit.py  loss_ablation_train.py  plot_metrics.py  run_novelty_experiments.py  run_reproducible_audit.py  simulated_domain_shift.py  tcga_download_and_eval.py  temperature_scaling.py  test_gradcam_crash.py  test_gradcam_img.py  tile_wsi.py  train.py  update_results_docs.py  wire.py
skills/: registry.json  skill_100_skill_generator.py  skill_101_results_writer.py  skill_102_figure_generator.py  skill_103_paper_scaffold.py  skill_104_paper_autofill.py  skill_10_gpu_monitor.py  skill_11_checkpoint_manager.py  skill_12_ci_smoke.py  skill_13_sqlite_schema.py  skill_14_db_layer.py  skill_15_seed_registry.py  skill_16_loop_engine.py  skill_17_daemon_supervisor.py  skill_18_watchdog.py  skill_19_windows_task_install.py  skill_1_detect_network.py  skill_20_offline_commit_queue.py  skill_21_local_api.py  skill_22_status_dashboard.py  skill_23_crash_resume.py  (+84 more)
(+12 files in other folders)
