[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prostate-cadx"
version = "1.0.0"
description = "Prostate Cancer CADx (Gleason Grading from histopathology tiles/WSI)"
readme = "docs/README.md"
requires-python = ">=3.11"
authors = [
    { name = "abdulbasit742", email = "abdulbasit742@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "opencv-python>=4.5.0",
    "pillow>=9.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "tiffslide>=1.0.0",
    "albumentations>=1.3.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "streamlit>=1.20.0",
    "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["lib", "loop", "backend"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
pythonpath = [
    "."
]
